# Conjuntos-Indexados-como-Alternativa-al-Array-Implementacion-y-Evaluacion.

./: .gitignore  a.out
memoria/Borrador_memoria/: #00_Resumen.lyx#  #01_Introduccion.lyx#  #02_Desarrollo.lyx#  #03_Resultados.lyx#  00_Resumen.lyx  01_Introduccion.lyx  02_Desarrollo.lyx  03_Resultados.lyx  04_AnalisisImpacto.lyx  10_Anexos.lyx  99_Bibliografia.bib  TFG.lyx
memoria/PlanDeTrabajo/: 01_DescripcionGeneral.lyx  02_ListaDeTareas.lyx  03_DiagramaDeGant.lyx  04_CopiaPropuestaTutor.lyx  PlanDeTrabajo.lyx  PlanDeTrabajo.lyx~
memoria/PlanDeTrabajo/include/: Portada.tex
memoria/TFG_Plantilla_ETSIINF_lyx_v2/: #00_Agradecimientos.lyx#  #00_Resumen.lyx#  #01_Introduccion.lyx#  #02_EntornoDeDesarrollo.lyx#  #03_Desarrollo.lyx#  #04_Resultados.lyx#  #05_AnalisisImpacto.lyx#  #05_Conclusiones.lyx#  #06_AnalisisImpacto.lyx#  00_Agradecimientos.lyx  00_Resumen.lyx  01_Introduccion.lyx  02_EntornoDeDesarrollo.lyx  03_Desarrollo-sjnfQW.lyx  03_Desarrollo.lyx  04_Resultados.lyx  05_AnalisisImpacto.lyx  05_Conclusiones.lyx  06_AnalisisImpacto.lyx  10_Anexos.lyx  99_Bibliografia.bib  TFG.lyx
memoria/TFG_Plantilla_ETSIINF_lyx_v2/src/: HollowList.hpp  HollowListv2.hpp  Test.cpp  genCSV.ipynb  genGraphs.py  genNumbers.cpp  ptrHollowList.hpp
src/: CMakeLists.txt  Prueba1.cpp  exe  puntuacion.cpp  puntuacion.h
src/InsercionEnListas/: Prueba1.cpp  input.txt  puntuacion.cpp  puntuacion.hpp  puntuacionLarge.hpp  puntuacionMedium.hpp  puntuacionSmall.hpp  puntuationLarge.hpp  puntuationMedium.hpp  puntuationSmall.hpp
src/InsercionEnListasC/: CMakeLists.txt  PtrArray.c  StructArray.c  insercion.c  insercionV2.c
src/Prototipo/: BinaryHeapArray.hpp  CMakeLists.txt  GappedList.hpp  GappedListV2.hpp  HollowList.hpp  HollowListv2.hpp  ListaConHuecos.cpp  Test.cpp  TestBinaryHeap.cpp  TestSet.cpp  TestVector.cpp  ptrHollowList.hpp
src/TemplatesYModelos/: PruebasCaja.cpp  caja.hpp  limon.hpp  zapato.hpp
src/genGraphs/: genCSV.ipynb
src/genNumbers/: genNumbers.cpp
